MODE-1558 - Minor code cleanup