@@ -32,7 +32,6 @@ import org.modeshape.webdav.locking.IResourceLocks;
 import org.modeshape.webdav.locking.LockedObject;
 import org.w3c.dom.DOMException;
 import org.w3c.dom.Document;
-import org.w3c.dom.Element;
 import org.w3c.dom.Node;
 import org.w3c.dom.NodeList;
 import org.xml.sax.InputSource;
@@ -45,27 +44,27 @@ public class DoLock extends AbstractMethod {
 
     private static Logger LOG = Logger.getLogger(DoLock.class);
 
-    private IWebdavStore _store;
-    private IResourceLocks _resourceLocks;
-    private boolean _readOnly;
+    private final IWebdavStore store;
+    private final IResourceLocks resourceLocks;
+    private final boolean readOnly;
 
-    private boolean _macLockRequest = false;
+    private boolean macLockRequest = false;
 
-    private boolean _exclusive = false;
-    private String _type = null;
-    private String _lockOwner = null;
+    private boolean exclusive = false;
+    private String type = null;
+    private String lockOwner = null;
 
-    private String _path = null;
-    private String _parentPath = null;
+    private String path = null;
+    private String parentPath = null;
 
-    private String _userAgent = null;
+    private String userAgent = null;
 
     public DoLock( IWebdavStore store,
                    IResourceLocks resourceLocks,
                    boolean readOnly ) {
-        _store = store;
-        _resourceLocks = resourceLocks;
-        _readOnly = readOnly;
+        this.store = store;
+        this.resourceLocks = resourceLocks;
+        this.readOnly = readOnly;
     }
 
     public void execute( ITransaction transaction,
@@ -73,21 +72,18 @@ public class DoLock extends AbstractMethod {
                          HttpServletResponse resp ) throws IOException, LockFailedException {
         LOG.trace("-- " + this.getClass().getName());
 
-        if (_readOnly) {
+        if (readOnly) {
             resp.sendError(WebdavStatus.SC_FORBIDDEN);
-            return;
         } else {
-            _path = getRelativePath(req);
-            _parentPath = getParentPath(getCleanPath(_path));
+            path = getRelativePath(req);
+            parentPath = getParentPath(getCleanPath(path));
 
-            Hashtable<String, Integer> errorList = new Hashtable<String, Integer>();
-
-            if (!isUnlocked(transaction, req, resp, _resourceLocks, _path)) {
+            if (!isUnlocked(transaction, req, resourceLocks, path)) {
                 resp.setStatus(WebdavStatus.SC_LOCKED);
                 return; // resource is locked
             }
 
-            if (!isUnlocked(transaction, req, resp, _resourceLocks, _parentPath)) {
+            if (!isUnlocked(transaction, req, resourceLocks, parentPath)) {
                 resp.setStatus(WebdavStatus.SC_LOCKED);
                 return; // parent is locked
             }
@@ -95,16 +91,16 @@ public class DoLock extends AbstractMethod {
             // Mac OS Finder (whether 10.4.x or 10.5) can't store files
             // because executing a LOCK without lock information causes a
             // SC_BAD_REQUEST
-            _userAgent = req.getHeader("User-Agent");
-            if (_userAgent != null && _userAgent.contains("Darwin")) {
-                _macLockRequest = true;
+            userAgent = req.getHeader("User-Agent");
+            if (userAgent != null && userAgent.contains("Darwin")) {
+                macLockRequest = true;
 
                 String timeString = Long.toString(System.currentTimeMillis());
-                _lockOwner = _userAgent.concat(timeString);
+                lockOwner = userAgent.concat(timeString);
             }
 
             String tempLockOwner = "doLock" + System.currentTimeMillis() + req.toString();
-            if (_resourceLocks.lock(transaction, _path, tempLockOwner, false, 0, TEMP_TIMEOUT, TEMPORARY)) {
+            if (resourceLocks.lock(transaction, path, tempLockOwner, false, 0, TEMP_TIMEOUT, TEMPORARY)) {
                 try {
                     if (req.getHeader("If") != null) {
                         doRefreshLock(transaction, req, resp);
@@ -115,7 +111,7 @@ public class DoLock extends AbstractMethod {
                     resp.sendError(WebdavStatus.SC_LOCKED);
                     LOG.error(e, new TextI18n("Lockfailed exception"));
                 } finally {
-                    _resourceLocks.unlockTemporaryLockedObjects(transaction, _path, tempLockOwner);
+                    resourceLocks.unlockTemporaryLockedObjects(transaction, path, tempLockOwner);
                 }
             }
         }
@@ -125,7 +121,7 @@ public class DoLock extends AbstractMethod {
                          HttpServletRequest req,
                          HttpServletResponse resp ) throws IOException, LockFailedException {
 
-        StoredObject so = _store.getStoredObject(transaction, _path);
+        StoredObject so = store.getStoredObject(transaction, path);
 
         if (so != null) {
             doLocking(transaction, req, resp);
@@ -135,9 +131,9 @@ public class DoLock extends AbstractMethod {
         }
 
         so = null;
-        _exclusive = false;
-        _type = null;
-        _lockOwner = null;
+        exclusive = false;
+        type = null;
+        lockOwner = null;
 
     }
 
@@ -147,10 +143,10 @@ public class DoLock extends AbstractMethod {
 
         // Tests if LockObject on requested path exists, and if so, tests
         // exclusivity
-        LockedObject lo = _resourceLocks.getLockedObjectByPath(transaction, _path);
+        LockedObject lo = resourceLocks.getLockedObjectByPath(transaction, path);
         if (lo != null) {
             if (lo.isExclusive()) {
-                sendLockFailError(transaction, req, resp);
+                sendLockFailError(req, resp);
                 return;
             }
         }
@@ -162,7 +158,7 @@ public class DoLock extends AbstractMethod {
             resp.sendError(WebdavStatus.SC_INTERNAL_SERVER_ERROR);
             LOG.trace(e.toString());
         } catch (LockFailedException e) {
-            sendLockFailError(transaction, req, resp);
+            sendLockFailError(req, resp);
         } finally {
             lo = null;
         }
@@ -176,22 +172,22 @@ public class DoLock extends AbstractMethod {
         StoredObject parentSo, nullSo = null;
 
         try {
-            parentSo = _store.getStoredObject(transaction, _parentPath);
-            if (_parentPath != null && parentSo == null) {
-                _store.createFolder(transaction, _parentPath);
-            } else if (_parentPath != null && parentSo != null && parentSo.isResource()) {
+            parentSo = store.getStoredObject(transaction, parentPath);
+            if (parentPath != null && parentSo == null) {
+                store.createFolder(transaction, parentPath);
+            } else if (parentPath != null && parentSo != null && parentSo.isResource()) {
                 resp.sendError(WebdavStatus.SC_PRECONDITION_FAILED);
                 return;
             }
 
-            nullSo = _store.getStoredObject(transaction, _path);
+            nullSo = store.getStoredObject(transaction, path);
             if (nullSo == null) {
                 // resource doesn't exist
-                _store.createResource(transaction, _path);
+                store.createResource(transaction, path);
 
                 // Transmit expects 204 response-code, not 201
-                if (_userAgent != null && _userAgent.indexOf("Transmit") != -1) {
-                    LOG.trace("DoLock.execute() : do workaround for user agent '" + _userAgent + "'");
+                if (userAgent != null && userAgent.contains("Transmit")) {
+                    LOG.trace("DoLock.execute() : do workaround for user agent '" + userAgent + "'");
                     resp.setStatus(WebdavStatus.SC_NO_CONTENT);
                 } else {
                     resp.setStatus(WebdavStatus.SC_CREATED);
@@ -199,10 +195,10 @@ public class DoLock extends AbstractMethod {
 
             } else {
                 // resource already exists, could not execute null-resource lock
-                sendLockFailError(transaction, req, resp);
+                sendLockFailError(req, resp);
                 return;
             }
-            nullSo = _store.getStoredObject(transaction, _path);
+            nullSo = store.getStoredObject(transaction, path);
             // define the newly created resource as null-resource
             nullSo.setNullResource(true);
 
@@ -210,7 +206,7 @@ public class DoLock extends AbstractMethod {
             executeLock(transaction, req, resp);
 
         } catch (LockFailedException e) {
-            sendLockFailError(transaction, req, resp);
+            sendLockFailError(req, resp);
         } catch (WebdavException e) {
             resp.sendError(WebdavStatus.SC_INTERNAL_SERVER_ERROR);
             LOG.error(e, new TextI18n("Webdav exception"));
@@ -235,13 +231,13 @@ public class DoLock extends AbstractMethod {
 
         if (lockToken != null) {
             // Getting LockObject of specified lockToken in If header
-            LockedObject refreshLo = _resourceLocks.getLockedObjectByID(transaction, lockToken);
+            LockedObject refreshLo = resourceLocks.getLockedObjectByID(transaction, lockToken);
             if (refreshLo != null) {
-                int timeout = getTimeout(transaction, req);
+                int timeout = getTimeout(req);
 
                 refreshLo.refreshTimeout(timeout);
                 // sending success response
-                generateXMLReport(transaction, resp, refreshLo);
+                generateXMLReport(resp, refreshLo);
 
                 refreshLo = null;
             } else {
@@ -264,33 +260,33 @@ public class DoLock extends AbstractMethod {
                               HttpServletResponse resp ) throws LockFailedException, IOException, ServletException {
 
         // Mac OS lock request workaround
-        if (_macLockRequest) {
-            LOG.trace("DoLock.execute() : do workaround for user agent '" + _userAgent + "'");
+        if (macLockRequest) {
+            LOG.trace("DoLock.execute() : do workaround for user agent '" + userAgent + "'");
 
             doMacLockRequestWorkaround(transaction, req, resp);
         } else {
             // Getting LockInformation from request
-            if (getLockInformation(transaction, req, resp)) {
+            if (getLockInformation(req, resp)) {
                 int depth = getDepth(req);
-                int lockDuration = getTimeout(transaction, req);
+                int lockDuration = getTimeout(req);
 
                 boolean lockSuccess = false;
-                if (_exclusive) {
-                    lockSuccess = _resourceLocks.exclusiveLock(transaction, _path, _lockOwner, depth, lockDuration);
+                if (exclusive) {
+                    lockSuccess = resourceLocks.exclusiveLock(transaction, path, lockOwner, depth, lockDuration);
                 } else {
-                    lockSuccess = _resourceLocks.sharedLock(transaction, _path, _lockOwner, depth, lockDuration);
+                    lockSuccess = resourceLocks.sharedLock(transaction, path, lockOwner, depth, lockDuration);
                 }
 
                 if (lockSuccess) {
                     // Locks successfully placed - return information about
-                    LockedObject lo = _resourceLocks.getLockedObjectByPath(transaction, _path);
+                    LockedObject lo = resourceLocks.getLockedObjectByPath(transaction, path);
                     if (lo != null) {
-                        generateXMLReport(transaction, resp, lo);
+                        generateXMLReport(resp, lo);
                     } else {
                         resp.sendError(WebdavStatus.SC_INTERNAL_SERVER_ERROR);
                     }
                 } else {
-                    sendLockFailError(transaction, req, resp);
+                    sendLockFailError(req, resp);
 
                     throw new LockFailedException();
                 }
@@ -305,8 +301,7 @@ public class DoLock extends AbstractMethod {
     /**
      * Tries to get the LockInformation from LOCK request
      */
-    private boolean getLockInformation( ITransaction transaction,
-                                        HttpServletRequest req,
+    private boolean getLockInformation( HttpServletRequest req,
                                         HttpServletResponse resp ) throws ServletException, IOException {
 
         Node lockInfoNode = null;
@@ -317,9 +312,7 @@ public class DoLock extends AbstractMethod {
             Document document = documentBuilder.parse(new InputSource(req.getInputStream()));
 
             // Get the root element of the document
-            Element rootElement = document.getDocumentElement();
-
-            lockInfoNode = rootElement;
+            lockInfoNode = document.getDocumentElement();
 
             if (lockInfoNode != null) {
                 NodeList childList = lockInfoNode.getChildNodes();
@@ -361,9 +354,9 @@ public class DoLock extends AbstractMethod {
                             scope = currentNode.getNodeName();
 
                             if (scope.endsWith("exclusive")) {
-                                _exclusive = true;
+                                exclusive = true;
                             } else if (scope.equals("shared")) {
-                                _exclusive = false;
+                                exclusive = false;
                             }
                         }
                     }
@@ -381,16 +374,16 @@ public class DoLock extends AbstractMethod {
                         currentNode = childList.item(i);
 
                         if (currentNode.getNodeType() == Node.ELEMENT_NODE) {
-                            _type = currentNode.getNodeName();
+                            type = currentNode.getNodeName();
 
-                            if (_type.endsWith("write")) {
-                                _type = "write";
-                            } else if (_type.equals("read")) {
-                                _type = "read";
+                            if (type.endsWith("write")) {
+                                type = "write";
+                            } else if (type.equals("read")) {
+                                type = "read";
                             }
                         }
                     }
-                    if (_type == null) {
+                    if (type == null) {
                         return false;
                     }
                 } else {
@@ -403,11 +396,11 @@ public class DoLock extends AbstractMethod {
                         currentNode = childList.item(i);
 
                         if (currentNode.getNodeType() == Node.ELEMENT_NODE || currentNode.getNodeType() == Node.TEXT_NODE) {
-                            _lockOwner = currentNode.getFirstChild().getNodeValue();
+                            lockOwner = currentNode.getFirstChild().getNodeValue();
                         }
                     }
                 }
-                if (_lockOwner == null) {
+                if (lockOwner == null) {
                     return false;
                 }
             } else {
@@ -430,8 +423,7 @@ public class DoLock extends AbstractMethod {
     /**
      * Ties to read the timeout from request
      */
-    private int getTimeout( ITransaction transaction,
-                            HttpServletRequest req ) {
+    private int getTimeout( HttpServletRequest req ) {
 
         int lockDuration = DEFAULT_TIMEOUT;
         String lockDurationStr = req.getHeader("Timeout");
@@ -445,13 +437,13 @@ public class DoLock extends AbstractMethod {
                 lockDurationStr = lockDurationStr.substring(0, commaPos);
             }
             if (lockDurationStr.startsWith("Second-")) {
-                lockDuration = new Integer(lockDurationStr.substring(7)).intValue();
+                lockDuration = Integer.valueOf(lockDurationStr.substring(7));
             } else {
                 if (lockDurationStr.equalsIgnoreCase("infinity")) {
                     lockDuration = MAX_TIMEOUT;
                 } else {
                     try {
-                        lockDuration = new Integer(lockDurationStr).intValue();
+                        lockDuration = Integer.valueOf(lockDurationStr);
                     } catch (NumberFormatException e) {
                         lockDuration = MAX_TIMEOUT;
                     }
@@ -470,9 +462,8 @@ public class DoLock extends AbstractMethod {
     /**
      * Generates the response XML with all lock information
      */
-    private void generateXMLReport( ITransaction transaction,
-                                    HttpServletResponse resp,
-                                    LockedObject lo ) throws IOException {
+    private void generateXMLReport( HttpServletResponse resp,
+                                    LockedObject lockedObject ) throws IOException {
 
         HashMap<String, String> namespaces = new HashMap<String, String>();
         namespaces.put("DAV:", "D");
@@ -487,18 +478,18 @@ public class DoLock extends AbstractMethod {
         generatedXML.writeElement("DAV::activelock", XMLWriter.OPENING);
 
         generatedXML.writeElement("DAV::locktype", XMLWriter.OPENING);
-        generatedXML.writeProperty("DAV::" + _type);
+        generatedXML.writeProperty("DAV::" + type);
         generatedXML.writeElement("DAV::locktype", XMLWriter.CLOSING);
 
         generatedXML.writeElement("DAV::lockscope", XMLWriter.OPENING);
-        if (_exclusive) {
+        if (exclusive) {
             generatedXML.writeProperty("DAV::exclusive");
         } else {
             generatedXML.writeProperty("DAV::shared");
         }
         generatedXML.writeElement("DAV::lockscope", XMLWriter.CLOSING);
 
-        int depth = lo.getLockDepth();
+        int depth = lockedObject.getLockDepth();
 
         generatedXML.writeElement("DAV::depth", XMLWriter.OPENING);
         if (depth == INFINITY) {
@@ -510,16 +501,16 @@ public class DoLock extends AbstractMethod {
 
         generatedXML.writeElement("DAV::owner", XMLWriter.OPENING);
         generatedXML.writeElement("DAV::href", XMLWriter.OPENING);
-        generatedXML.writeText(_lockOwner);
+        generatedXML.writeText(lockOwner);
         generatedXML.writeElement("DAV::href", XMLWriter.CLOSING);
         generatedXML.writeElement("DAV::owner", XMLWriter.CLOSING);
 
-        long timeout = lo.getTimeoutMillis();
+        long timeout = lockedObject.getTimeoutMillis();
         generatedXML.writeElement("DAV::timeout", XMLWriter.OPENING);
         generatedXML.writeText("Second-" + timeout / 1000);
         generatedXML.writeElement("DAV::timeout", XMLWriter.CLOSING);
 
-        String lockToken = lo.getID();
+        String lockToken = lockedObject.getID();
         generatedXML.writeElement("DAV::locktoken", XMLWriter.OPENING);
         generatedXML.writeElement("DAV::href", XMLWriter.OPENING);
         generatedXML.writeText("opaquelocktoken:" + lockToken);
@@ -544,36 +535,35 @@ public class DoLock extends AbstractMethod {
                                              HttpServletResponse resp ) throws LockFailedException, IOException {
         LockedObject lo;
         int depth = getDepth(req);
-        int lockDuration = getTimeout(transaction, req);
+        int lockDuration = getTimeout(req);
         if (lockDuration < 0 || lockDuration > MAX_TIMEOUT) {
             lockDuration = DEFAULT_TIMEOUT;
         }
 
         boolean lockSuccess = false;
-        lockSuccess = _resourceLocks.exclusiveLock(transaction, _path, _lockOwner, depth, lockDuration);
+        lockSuccess = resourceLocks.exclusiveLock(transaction, path, lockOwner, depth, lockDuration);
 
         if (lockSuccess) {
             // Locks successfully placed - return information about
-            lo = _resourceLocks.getLockedObjectByPath(transaction, _path);
+            lo = resourceLocks.getLockedObjectByPath(transaction, path);
             if (lo != null) {
-                generateXMLReport(transaction, resp, lo);
+                generateXMLReport(resp, lo);
             } else {
                 resp.sendError(WebdavStatus.SC_INTERNAL_SERVER_ERROR);
             }
         } else {
             // Locking was not successful
-            sendLockFailError(transaction, req, resp);
+            sendLockFailError(req, resp);
         }
     }
 
     /**
      * Sends an error report to the client
      */
-    private void sendLockFailError( ITransaction transaction,
-                                    HttpServletRequest req,
+    private void sendLockFailError( HttpServletRequest req,
                                     HttpServletResponse resp ) throws IOException {
         Hashtable<String, Integer> errorList = new Hashtable<String, Integer>();
-        errorList.put(_path, WebdavStatus.SC_LOCKED);
+        errorList.put(path, WebdavStatus.SC_LOCKED);
         sendReport(req, resp, errorList);
     }
 
